# FileSharing

./: .gitignore  README.md  app.py  config.py  discord_client.py  env.example  gdrive.py  main.py  processor.py  pyproject.toml  requirements.txt
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/filesharing/app/: MainActivity.kt  MainViewModel.kt  SettingsActivity.kt
android/app/src/main/kotlin/com/filesharing/app/auth/: GoogleAuthManager.kt
android/app/src/main/kotlin/com/filesharing/app/data/: PreferencesManager.kt
android/app/src/main/kotlin/com/filesharing/app/upload/: DiscordUploader.kt  DriveUploader.kt  FileProcessor.kt
android/app/src/main/kotlin/com/filesharing/app/util/: FileUtils.kt  ZipUtils.kt
android/app/src/main/res/drawable/: ic_arrow_back.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/: app.json  index.tsx  package.json
vencord/GDriveUploader/: README.md  auth.ts  gdrive.ts  index.tsx  native.ts
